<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.HomeActivity">

    <ImageView
        android:id="@+id/ivHalfCircle"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:src="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/setting_image"
        app:layout_constraintTop_toTopOf="@+id/tvBrunopham"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvBrunopham"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brunopham"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/circularstd_bold"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/image_rounded"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBrunopham"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@android:color/black"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CityAndCountry"
        android:textColor="#8F90A7"
        android:textSize="16sp"
        android:fontFamily="@font/circularstd_book"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/followLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/follow_box_background"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvFollowersValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="#8F90A7"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:fontFamily="@font/circularstd_book"
            app:layout_constraintStart_toEndOf="@+id/tvFollowersValue"
            app:layout_constraintTop_toTopOf="@+id/tvFollowersValue"/>

        <TextView
            android:id="@+id/tvFollowingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvfollowing"/>

        <TextView
            android:id="@+id/tvfollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="#8F90A7"
            android:textSize="16sp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/circularstd_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvFollowingValue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/socialIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/followLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivGlobe"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/globe"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/ivDot"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/dot_image"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivGlobe"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/ivInstagram"
            android:layout_width="25dp"
            android:layout_height="21dp"
            android:src="@drawable/instagram_ic"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/ivDot"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/ivDot1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/dot_image"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivInstagram"/>

        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/facebook_ic"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivDot1"
            tools:ignore="ContentDescription"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shotsCollectionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/socialIcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/containerShots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/bg_shots_unselected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/containerCollection"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvShotsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/value"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvShots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/shots"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerCollection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/bg_shots_unselected"
            app:layout_constraintStart_toEndOf="@+id/containerShots"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvCollectionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/value"
                android:textColor="@color/lightBlack"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvCollection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/collection"
                android:textColor="@color/lightBlack"
                android:textSize="14sp"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/illustrationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/shotsCollectionsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/multipal_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="24dp"
            tools:ignore="ContentDescription"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:theme="@style/Widget.AppCompat.ProgressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>